# projectr

./: Makefile  monitoring.md  readme.md  siege.txt  stress.md
analytics-worker/: get_client_id.html  get_client_id.js  main.py  readme.md  test.html
app/: Cargo.toml  Dockerfile  Makefile  docker-compose.yml
app/src/: api.rs  elastic.rs  main.rs  mongo.rs
database/: docker-compose.yml
loadbalancer/: docker-compose.yml
loadbalancer/config/nginx/conf.d/: default.conf
monitoring/: Makefile  docker-compose.yml
monitoring/config/grafana/dashboards/: docker.json  mongo.json  nginx.json  system.json  system2.json
monitoring/config/grafana/provisioning/datasources/: defaults.yml
monitoring/config/telegraf/: telegraf.conf
scripts/: dump_all.sh  load.txt  load_gen.sh  prepare.txt  prepare_data.sh  stress.txt  stress_gen.sh  truncate_elastic.sh  truncate_mongo.sh
scripts/data/elastic/: test_index_mapping.json
