[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6"
axum-macros = "0.3"
rand = "0.8"
elasticsearch = { version = "8.5.0-alpha.1", features = ["rustls-tls"], default-features = false }
tokio = { version = "1.25.0", features = ["full"] }
futures = "0.3"
tokio-compat = "0.1"
serde = "~1"
serde_json = "~1"
serde_millis = "0.1"
mongodb = "2.3"
anyhow = "1"
uuid = "1"
tracing = "0.1"
tracing-subscriber = "0.3"